fix(file): restore Java 8 compatibility by replacing threadId() with getId()
Replace Thread.currentThread().threadId() with getId() for Java 8 compatibility.
The threadId() method was added in Java 19 and breaks compilation on Java 8.

Files fixed:
- ConcurrentSpilloverManager: spillover file naming
- HtmlToJsonConverter: temp file generation
- JsonPathConverter: temp file generation
- ConcurrentParquetCache: temp file generation
- ExcelFileTest: test temp directory creation

All instances used for generating unique temporary file names.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>